--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ a h4{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding-bottom: 0.2em;
 }
 .box2{
